# fengxuanAgent

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260429_0001_init.py  20260429_0002_mcp_tables.py  20260509_0003_user_builtin_tool_prefs.py  20260509_0004_chat_messages_tools_used.py  20260513_0005_chat_sessions_client_label.py
app/: __init__.py  main.py
app/agents/: __init__.py
app/api/: __init__.py  router.py
app/core/: config.py  deps.py  exceptions.py  logger.py  security.py
app/db/: session.py
app/integrations/: __init__.py  model_adapters.py  vector_store.py
app/models/: __init__.py  agent_tools.py  base.py  chat.py  knowledge_base.py  mcp.py  model_config.py  prompt.py  token.py  user.py
app/repositories/: __init__.py
app/schemas/: agent_tools.py  auth.py  chat.py  knowledge_base.py  mcp.py  model_config.py  prompt.py  response.py
app/services/: agent_tool_service.py  auth_service.py  chat_service.py  knowledge_base_service.py  mcp_gateway_service.py  mcp_runtime_service.py  mcp_server_service.py  model_service.py  tool_trace.py  (+3 more)
docs/: BACKEND_GUIDE.md  LEARNING_CHAT_API.md  LEARNING_ENV_SETUP.md  LEARNING_INDEX.md  LEARNING_PHASE_01_HTTP.md  LEARNING_PHASE_02_DB.md  LEARNING_PHASE_03_CHAT.md  LEARNING_PHASE_04_TOOLS_RAG.md  LEARNING_PHASE_05_MCP_TESTS.md  LEARNING_PREREQUISITES.md
tests/: test_bazi_tools.py  test_echo_tool.py  test_health.py  test_mcp_openapi_paths.py  test_ping.py  test_prompt_render.py  test_runtime_tool.py  test_system_runtime.py  test_vector_store_retrieve.py
(+29 files in other folders)
