[tool.poetry]
name = "fengxuan-agent-backend"
version = "0.1.0"
description = "LangChain + LangGraph intelligent agent backend"
authors = ["fengxuan <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.36"
alembic = "^1.13.2"
pymysql = "^1.1.1"
passlib = "^1.7.4"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
langchain = "^1.2.0"
langgraph = "^1.0.2"
langchain-community = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-ollama = "^0.3.0"
chromadb = "^0.5.12"
redis = "^5.1.1"
#
# Stage 2 requirement: MCP stdio client/server integration.
# The code imports `mcp` only at runtime, but we still declare it here
# so production environments can install the SDK.
mcp = ">=1.8.0,<2.0.0"
# `mcp` 包在 import 时会执行其 `__init__.py` 并间接加载 `sse_starlette`；必须显式安装。
# 使用 2.x：3.x 要求 starlette>=0.49，与本项目 fastapi 0.115 自带的 starlette<0.47 冲突。
sse-starlette = ">=2.1.3,<3.0.0"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
email-validator = "^2.2.0"
# Windows 上 zoneinfo 解析 IANA 时区名需要 tzdata；Linux 上为无害补充。
tzdata = ">=2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
